Fix image picker width on mobile; make chapter pages less wide

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -37,7 +37,7 @@ body {
     padding-bottom: 3em;
   }
   &.chapter {
-    max-width: 60em;
+    max-width: 50em;
     padding-bottom: 3em;
   }
 }
